--- a/sci.html
+++ b/sci.html
@@ -5,85 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>scientific calculator</title>
-    <style>
-        body{
-                background-color: rgb(248, 246, 244);
-            }
-            *{
-            box-sizing:border-box;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing:border-box;
-            }
-            .wrap{
-                width: 400px;
-                margin-left: 300PX;
-                height:auto;
-                background: rgb(94, 94, 83);
-                padding: 15px;
-            }
-            input[type=text]{
-                width:100%;
-                padding:10px;
-                font-size:22px;
-                font-weight: bold;
-                margin-top: 20px;
-                border-radius: 5px;
-
-
-            }
-            input[type=button]{
-                width: 89px;
-                padding: 10px;
-                font-size: 22px;
-                font-weight:bold;
-                border-radius: 5px;
-                background-color: rgb(236, 231, 225);
-            }
-            #history{
-                height: 660px;
-                display: flex;
-                box-sizing: border-box;
-                background-color: rgb(94, 94, 83);
-                width:250px;
-                margin-right: 200px;
-                margin-top: 0px;
-                color:aliceblue;
-                border:2px black;
-                overflow-y: scroll;
-                padding:15px;
-                padding-top: 20px;
-            }
-            #history h1{
-                padding-top: 8px;
-                font-size:20px; 
-            }
-            #history :last-child{
-                font-size: 1.3em;
-                font-weight: 500;
-                color: alicebluez;
-
-            }   
-            .wd button{
-                width:190px;
-                padding: 10px;
-                padding-left: 50px;
-                font-size: 22px;
-                font-weight:bold;
-                border-radius: 5px;
-                background-color: rgb(236, 231, 225);
-            }
-            .hey{
-                padding-left: 50px;
-            }
-    </style>
+    <link rel="stylesheet" href="sci.css">
+    <script  src="sci.js"></script>
 </head>
 <body>
     <table>
         <tr>
             <td>
                 <div class="wrap">
-                    <a href="calculator.html" style="background-color:black;color:aliceblue">STANDARD</a>
-                    <h2 style="color: aliceblue; text-align: center; padding-left:10px;font-style:bold;">Calculator</h2>
+                    <a href="calculator.html">STANDARD</a>
+                    <h2>Calculator</h2>
                         <form name="cal">
                             <input type="text" name="display">
                             <br><br>
@@ -123,47 +54,16 @@
                             <input type="button" class="hey" value="=" onclick="document.cal.display.value =calculation(document.cal.display.value);">
                             <input type="button" value="CLEAR" onclick="document.cal.display.value=''">
                             </div>
-                    </form>
+                        </form>
             </td>
             <td>
             </div>
-            <div id='history'>
-                <h1>HISTORY:</h1>
-                <p id="his"></p>
-            </div>
+                <div id='history'>
+                    <h1>HISTORY:</h1>
+                    <p id="his"></p>
+                </div>
             </td>
         </tr>
-    </table>
-    <script type="text/javascript">
-        let history=document.getElementById('history');
-        var Historydata=[];
-        var expression='';
-       var  res='';
-
-        function calculation(v){
-            console.log("in cal");
-            expression=v;
-            res=eval(v);
-            Historydata.push({"expression":expression,"result":res})
-            showHistory();
-
-            expression='';
-            res='';
-            return eval(v);
-        }
-
-        function showHistory(){
-            var log=document.getElementById("his");
-            var string=''
-            for (var key in Historydata){
-                string+=""+ Historydata[key]["expression"]+ " = "+ Historydata[key]["result"] + "<br>";
-            }
-            log.innerHTML=string;
-            // log.innerHTML="work";
-            console.log(string);
-        }
-    </script> 
-
-    
+    </table>   
 </body>
 </html>
